--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         </div>
 
         <p class="text-center text-gray-600 italic mb-8 px-6">
-            Toca cada pétalo para descubrir nuestros momentos especiales
+            Toca cada pétalo
         </p>
 
         <div class="w-full bg-white/50 backdrop-blur-sm rounded-lg p-4 shadow-md">
